Fixing logo from overlapping white circle

--- a/style.css
+++ b/style.css
@@ -110,14 +110,14 @@ box-shadow: 0px -3px 29px 0px rgba(0,0,0,0.3);
 .logofit {
     position: absolute;
     z-index: 101;
-    width: 50%;
+    width: 40%;
     max-width: 300px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
     bottom: 0;
-    margin-bottom: 4%;
+    margin-bottom: 3%;
 }
 
 .middlebar {
